--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,14 @@
 {
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "jest": true
   },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "prettier",
+    "plugin:prettier/recommended",
     "plugin:react/jsx-runtime",
     "plugin:i18next/recommended"
   ],
@@ -16,7 +17,7 @@
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
   "plugins": [
@@ -34,8 +35,12 @@
     }
   },
   "rules": {
-    "no-unused-vars": "warn",
     "@typescript-eslint/no-unused-vars": "warn",
-    "i18next/no-literal-string": 2
+    "eqeqeq": "error",
+    "i18next/no-literal-string": 2,
+    "import/no-unresolved": "off",
+    "no-unused-vars": "warn",
+    "max-len": ["error", { "ignoreComments": true, "ignorePattern": "^import.*" }],
+    "prettier/prettier": "error"
   }
 }
