--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "webpack serve --env PORT=3000",
     "build:prod": "npx webpack --env mode=production",
     "build:dev": "npx webpack --env mode=development",
-    "lint:ts": "eslint \"**/*.{js,jsx,ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix",
+    "lint:ts": "eslint \"**/*.{jsx,ts,tsx,js}\"",
+    "lint:ts:fix": "eslint \"**/*.{jsx,ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "unit": "jest --config ./config/jest/jest.config.ts"
+    "unit": "jest --config ./config/jest/jest.config.ts",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
+    "build-storybook": "storybook build -c ./config/storybook"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +22,14 @@
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@storybook/addon-essentials": "^7.6.11",
+    "@storybook/addon-interactions": "^7.6.11",
+    "@storybook/addon-links": "^7.6.11",
+    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/blocks": "^7.6.11",
+    "@storybook/react": "^7.6.11",
+    "@storybook/react-webpack5": "^7.6.11",
+    "@storybook/test": "^7.6.11",
     "@svgr/webpack": "^6.2.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -45,6 +55,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.15",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
@@ -54,6 +65,7 @@
     "prettier": "^3.2.1",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
+    "storybook": "^7.6.11",
     "style-loader": "^3.3.1",
     "stylelint": "^16.1.0",
     "stylelint-config-standard-scss": "^13.0.0",
