--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "webpack serve --env PORT=3000",
     "build:prod": "npx webpack --env mode=production",
     "build:dev": "npx webpack --env mode=development",
-    "lint:ts": "eslint \"**/*.{jsx,ts,tsx,js}\"",
-    "lint:ts:fix": "eslint \"**/*.{jsx,ts,tsx}\" --fix",
+    "lint:ts": "eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
