--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,3 +27,7 @@ jobs:
         run: npm run lint:scss
       - name: run unit tests
         run: npm run test:unit
+      - name: build storybook
+        run: npm run storybook:build
+      - name: run screenshots tests
+        run: npm run test:ui:ci
